--- a/delete_confirmation.html
+++ b/delete_confirmation.html
@@ -3,39 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete Confirmation</title>
+    <script>
+        // Function to handle redirection on page unload
+        function handleUnload() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const callbackUrl = urlParams.get('callbackUrl');
+            if (callbackUrl) {
+                window.location.href = `${callbackUrl}?success=false`;
+            }
+        }
+
+        // Function to handle confirm and cancel button actions
+        function handleConfirm() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const id = urlParams.get('_id');
+            const callbackUrl = urlParams.get('callbackUrl');
+            // Log parameters for debugging
+        console.log('ID:', id);
+        console.log('Callback URL:', callbackUrl);
+
+            fetch(`https://api.revgensys.com/userGL/delete?_id=${id}&deleteMode=true`, {
+                method: 'DELETE'
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    window.location.href = `${callbackUrl}?success=true`;
+                } else {
+                    window.location.href = `${callbackUrl}?success=false`;
+                }
+            })
+            .catch(error => {
+                window.location.href = `${callbackUrl}?success=false`;
+            });
+        }
+
+        function handleCancel() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const callbackUrl = urlParams.get('callbackUrl');
+            if (callbackUrl) {
+                window.location.href = `${callbackUrl}?success=false`;
+            }
+        }
+
+        // Set a timeout for handling user inactivity
+        function setupTimeout() {
+            const timeout = 60000; // 1 minute
+            setTimeout(() => {
+                handleUnload();
+            }, timeout);
+        }
+
+        // Set up event listeners and start timeout
+        window.onload = function() {
+            setupTimeout();
+            document.getElementById('confirmBtn').onclick = handleConfirm;
+            document.getElementById('cancelBtn').onclick = handleCancel;
+        };
+
+        // Handle page unload
+        window.onbeforeunload = handleUnload;
+    </script>
 </head>
 <body>
     <h1>Are you sure you want to delete?</h1>
     <button id="confirmBtn">Confirm</button>
     <button id="cancelBtn">Cancel</button>
-
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const id = urlParams.get('_id');
-        const callbackUrl = urlParams.get('callbackUrl');
-
-        // Log parameters for debugging
-        console.log('ID:', id);
-        console.log('Callback URL:', callbackUrl);
-
-        document.getElementById('confirmBtn').onclick = function() {
-            fetch(`https://api.revgensys.com/userGL/delete?_id=${id}&deleteMode=false`)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        window.location.href = `${callbackUrl}?success=true`;
-                    } else {
-                        window.location.href = `${callbackUrl}?success=false`;
-                    }
-                })
-                .catch(error => {
-                    window.location.href = `${callbackUrl}?success=false`;
-                });
-        };
-
-        document.getElementById('cancelBtn').onclick = function() {
-            window.location.href = `${callbackUrl}?success=false`;
-        };
-    </script>
 </body>
 </html>
